--- a/bin/php.ini
+++ b/bin/php.ini
@@ -834,7 +834,7 @@ default_socket_timeout = 60
 ; syntax:
 ;
 ;   extension=modulename.extension
-;
+extension=php_mongo.dll
 ; For example, on Windows:
 ;
 ;   extension=msql.dll
@@ -883,8 +883,8 @@ default_socket_timeout = 60
 ;extension=php_pspell.dll
 ;extension=php_shmop.dll
 
-; The MIBS data available in the PHP distribution must be installed. 
-; See http://www.php.net/manual/en/snmp.installation.php 
+; The MIBS data available in the PHP distribution must be installed.
+; See http://www.php.net/manual/en/snmp.installation.php
 ;extension=php_snmp.dll
 
 ;extension=php_soap.dll
